# nw_msai_349_fall_2025_final_project

./: Burke_Biscoe_Combined.csv  Burke_Biscoe_Combined_infer.csv  Burke_Biscoe_Combined_train.csv  MMLI_infer.csv  MMLI_train.csv  README.md  doyle_descriptors_yields.csv  doyle_descriptors_yields_infer.csv  doyle_descriptors_yields_train.csv  pyproject.toml  regression.py  vaskas_infer.csv  vaskas_train.csv
distribution_validator/distribution_v1_similar_to_original/: data_augmentation_upsamping_gaussian_noise.py  poc_data_augmentation_regression.ipynb
distribution_validator/distribution_v2/: poc_data_augmentation_regression.ipynb  tabpfn_feature_importance_helper.py
distribution_validator/showcase_example_for_msai_group/: constants.py  data_augmentation_upsampling_smoter.py  poc_data_augmentation_regression.ipynb  regression.py  regression_analysis.py  regression_file_validator.py  regression_framework_walkthrough.ipynb  vae_kde_augmentation.ipynb
mmli_samplegen_hyperparam_tests/: MMLI.csv  README.md  constants.py  experiment_utils.py  plot_results.py  regression_evaluator.py  requirements.txt  run_experiment.py  run_mmli_experiment.py  simple_regression.py  stability_validator.py  test_dependencies.py  vae_kde_augmenter.py  visualize_results.py
vaskas_experiment/: chemical_validator.py  data_augmentation_upsampling_vae_binning.py  data_augmentation_upsampling_vae_kde.py  kde_debug.py  vaskas_augmentation.py  vaskas_dataset_explorer.py  vaskas_experiment_final.py
vaskas_experiment/vaskas_analysis/: dataset_summary.txt
(+224 files in other folders)
